navBar & footer done
Signed-off-by: alizaynoune <simo.jokir@gmail.com>

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,7 @@
 body{
     background-image: url("./img/background.jpg");
     overflow-x: hidden;
+    padding: 0;
+    margin: 0 ;
+    font-family: 'Source Code Pro', monospace !important;
 }
