invite users componant
Signed-off-by: alizaynoune <simo.jokir@gmail.com>

--- a/client/src/pages/styles/HeaderStyled.css
+++ b/client/src/pages/styles/HeaderStyled.css
@@ -1,7 +1,7 @@
-.Header{
+/* .Header{
     background: none;
     background-image: url("../../img/header.png") !important;
     background-size: contain;
     background-repeat-y: no-repeat;
     background-position: center;
-}
+} */
