update style sliderBar
Signed-off-by: alizaynoune <simo.jokir@gmail.com>

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,5 +6,5 @@ body{
     font-family: 'Source Code Pro', monospace !important;
 }
 * {
-    letter-spacing: -1px !important;
+    letter-spacing: -1px;
 }
