update modal alert [gameOver, gameWone]
Signed-off-by: alizaynoune <zaynoune.ali@gmail.com>

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 body{
     background-image: url("./img/background.jpg");
-    overflow-x: hidden;
+    overflow: hidden;
     padding: 0;
     margin: 0 ;
     font-family: 'Source Code Pro', monospace !important;
