--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,28 @@
-body{
+body {
     background-image: url("./img/background.jpg");
-    background-color: #6DB3F2;
-    overflow: hidden;
-    padding: 0;
-    margin: 0 ;
+    overflow: hidden !important;
+    padding: 2;
+    margin: 0;
+    width: 100%;
+    height: 100%;
     font-family: 'Source Code Pro', monospace !important;
 }
-body::before{
+
+body::before {
     background-color: rgba(0, 0, 0, 0.6);
     content: '';
     display: block;
     height: 100%;
     position: absolute;
     width: 100%;
-  }
+}
+
 * {
     letter-spacing: -1px;
+}
+
+#root {
+    height: 100%;
+    overflow: hidden;
+    position: relative;
 }
